# mtgslop

./: .gitignore  README.md
.github/workflows/: pages.yml
mtgcanvas/: .eslintrc.cjs  DEADCODE_DUPLICATES_REPORT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mtgcanvas/.github/workflows/: pages.yml
mtgcanvas/src/: main.ts  placement.ts
mtgcanvas/src-tauri/: Cargo.toml  tauri.conf.json
mtgcanvas/src-tauri/src/: commands.rs  main.rs
mtgcanvas/src/config/: dataset.ts  dimensions.ts  flags.ts  gpuBudget.ts  rendering.ts
mtgcanvas/src/data/: db.ts  importer.ts  repositories.ts  schema.sql
mtgcanvas/src/interaction/: marquee.ts
mtgcanvas/src/scene/: SpatialIndex.ts  camera.ts  cardNode.ts  cullingSystem.ts  groupNode.ts  keyedMinHeap.ts  minMaxHeap.ts  spriteFactory.ts
mtgcanvas/src/search/: scryfallQuery.ts
mtgcanvas/src/services/: cardStore.ts  decklist.ts  idRegistry.ts  imageCache.ts  largeDataset.ts  persistence.ts  persistenceService.ts  projects.ts  scryfall.ts
mtgcanvas/src/state/: dirtyQueue.ts  selectionStore.ts  uiState.ts
mtgcanvas/src/types/: ambient.d.ts  card.ts  geometry.ts  globals.d.ts  ids.ts  repositories.ts
mtgcanvas/src/ui/: colors.ts  dpr.ts  helpPanel.ts  importExport.ts  inputs.ts  modeToggle.ts  networkSpinner.ts  searchPalette.ts  theme.ts
notes/: TODO.txt  all.txt  categories.txt  complex_query.txt  dump_card_names.py  fetch_cards_by_name.py  goodOmo.txt  ownedCards.txt  processCards.py  provides.json  requiredCards.txt  scryfall.py  scryfall.txt  typal.json
(+11 files in other folders)
