[package]
name = "mtgcanvas"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features= ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features= ["json"] }
anyhow = "1"
tauri = { version = "2.8", features = [] }

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[features]
default = []
